https://bugs.webkit.org/show_bug.cgi?id=23611 Multiline Javascript comments cause incorrect parsing of following script.

Reviewed by Oliver Hunt.

From the spec:
"A MultiLineComment [is] simply discarded if it contains no line terminator,
but if a MultiLineComment contains one or more line terminators, then it is
replaced with a single line terminator, which becomes part of the stream of
inputs for the syntactic grammar."

This may result in behavioural changes, due to automatic semicolon insertion.

Source/JavaScriptCore:

* parser/Lexer.cpp:
(JSC::Lexer::parseMultilineComment):
    - Set m_terminator is we see a line terminator in a multiline comment.

LayoutTests:

* fast/js/multiline-comment-newline-expected.txt: Added.
* fast/js/multiline-comment-newline.html: Added.
* fast/js/script-tests/multiline-comment-newline.js: Added.
(shouldBeUndefined):



Canonical link: https://commits.webkit.org/78431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89100 268f45cc-cd09-0410-ab3c-d52691b4dbfc